--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -34,7 +34,7 @@ function tr($string,$ret=false) {
 ?>
 <script>
 $(function() {
-  <?if ( is_file($caPaths['logging']) ):?>
+  <?if ( is_file(CA_PATHS['logging']) ):?>
     $("#debugging").show();
   <?endif;?>
 });
